# hacknationAnomalie

./: .gitignore  README.md  apply_filter.py  checkanomaly.sh  crop_image.py  data_normalization.py  install.sh  main.py  predict.py  prepare_training_data.py  prepare_training_data_new.py  pyproject.toml  requirements.txt  sharpen_image.py  train.py  train_model.sh
ImageProcessor/: XRayFilters.py  XRayImage.py  XRayImageProcessor.py
og/: prepare_training_data.py
