[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anomalib>=2.2.0",
    "onnx>=1.20.0",
    "onnxscript>=0.5.6",
    "opencv-python>=4.12.0.88",
    "openvino>=2025.4.0",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
]
